<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="CardInfo"
            type="binglove.entity.CardInfo" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/toolbarstyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/register_tvOperatorName"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="56dp"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:text="@string/CHINATELECOM"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />
                    <TextView
                        android:id="@+id/register_tvCommit"
                        style="@style/ActionbarTextView"
                        android:text="@string/commit"
                        />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/phoneNumber" />

                    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

                        <EditText
                            style="@style/MyEdiText"
                            android:hint="@string/phoneNumber" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/servicePassword" />

                    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

                        <EditText
                            style="@style/MyEdiText"
                            android:hint="@string/servicePassword" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/GetCard" />

                <ImageView
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:background="@mipmap/user" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/name" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.name}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/sex" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.sex}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/cardStyle" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.cardStyple}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/cardNumber" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.cardNumber}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/birthday" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.birthday}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/visaOffice" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.visaOffice}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/TimeForVisa" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.timeForVisa}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/failureTime" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.failureTime}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/address" />

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text='@{CardInfo.address}' />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_lint" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>